ingress_todoapp.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: todo-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: todo-app
  name: todo-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-app-1
  template:
    metadata:
      labels:
        app: todo-app-1
    spec:
      containers:
      - name: todo-app-container
        image: ayantika27/todoapp:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8001

---

apiVersion: v1
kind: Service
metadata:
  namespace: todo-app
  name: todoapp-service
spec:
  type: NodePort
  selector:
    app: todo-app-1
  ports:
    - port: 8082
      targetPort: 8001
      protocol: TCP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: todo-app
  name: todoapp-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: todoapp-service
              port:
                number: 80
